Fixed a bug after sidebar collapse

--- a/public/portfolio/custom/custom.css
+++ b/public/portfolio/custom/custom.css
@@ -104,14 +104,9 @@ body {
 .nav li a {
     display: block;
     text-decoration: none;
-    padding: 0.5vw 0.5vh;
-    width: 17vw;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-}
-
-.nav-item {
-    object-fit: fill;
+    padding: 0.5vw 0.65vh;
+    margin-left: 0.65vw;
+    width: 16.7vw;
 }
 
 h1 {
